--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,17 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@prisma/client": "^5.16.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "prisma": "^5.16.1"
-  }
+  },
+  "description": ""
 }
