--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.16.1",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
